@@ -1,5 +1,12 @@
 2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>
 
+	* Makefile: Add new program to demonstrate use of BSP command line
+	arguments.
+	* bspcmdline/.cvsignore, bspcmdline/Makefile, bspcmdline/README,
+	bspcmdline/test.c: New files.
+
+2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>
+
 	* minimum/test.c: Remove warning.
 
 2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>
